k8s/fastapi/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  ems-fastapi
  namespace: enterprise-apps
  labels:
    app:  ems-fastapi
spec:
  selector:
    matchLabels:
      app: ems-fastapi
  replicas: 2
  template:
    metadata:
      labels:
        app:  ems-fastapi
    spec:
      containers:
        - name:  ems-fastapi
          image:  utkarshrajdockerhub/ems:v1.1
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 300m
              memory: 256Mi
          # livenessProbe:
          #   httpGet:
          #     path: /health
          #     port: 8000
          #   initialDelaySeconds: 100
          #   periodSeconds: 10
          #   timeoutSeconds: 5
          #   failureThreshold: 5
          # readinessProbe:
          #   httpGet:
          #     path: /health
          #     port: 8000
          #   initialDelaySeconds: 100
          #   timeoutSeconds: 2
          #   periodSeconds: 5
          #   successThreshold: 1
          #   failureThreshold: 3
          ports:
            - containerPort:  8000
              name:  ems-port

---
apiVersion: v1
kind: Service
metadata:
  name: ems-api
  namespace: enterprise-apps
spec:
  selector:
    app: ems-fastapi
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: ems-port
